created Endpoint for Rest Server to get all Readings from the Database by a filter